Fixing findbugs issues.